# turkanime-indirici

./: .gitignore  .gitmodules  ANIME_PROVIDER_GUIDE.md  DISCLAIMER.md  README.md  __init__.py  ayarlar.json  config.ini  gecmis.json  gereksinimler.json  klavuz.html  main.spec  manifest.json  pyinstaller.spec  pyproject.toml  requirements-gui.txt  requirements.txt  sibnet.conf  test_speed_download.py  turkanime-gui.spec  turkanime.py
.github/ISSUE_TEMPLATE/: bug-raporu.md
.github/workflows/: main.yml  publish.yml  release.yml
api/: search_api.py
docs/: V9.3.4.md  V9.3.5.md  build_exe.bat  hash_dist_md5.bat  klavuz.html  publish.bat  version.json
lib/: anime.py  players.py
pyinstaller_hooks/: qt6_runtime_hook.py
scripts/: hash_md5.sh
turkanime_api/: __init__.py  anilist_client.py  anime.py  animedepo.py  bypass.py  dosyalar.py  objects.py  players.py  tools.py  version.py  webdriver.py
turkanime_api/cli/: __main__.py  cli_tools.py  dosyalar.py  gereksinimler.py  version.py
turkanime_api/common/: __init__.py  adapters.py  db.py  ui.py  ui_helpers.py  utils.py
turkanime_api/gui/: README.md  __init__.py  anime_names.json  boot.py  main.py  update_manager.py
turkanime_api/sources/: __init__.py  adapter.py  adapter_template.py  animecix.py  anizle.py
turkanime_gui/: dosyalar.py  main.py
turkanime_gui/src/: app.py  main.py
turkanime_gui/src/components/: anime_list.py  download_list.py  download_manager.py  episode_list.py
