[tool.poetry]
name = "turkanime-cli"
version = "8.1.0"
description = "Türkanime video oynatıcı ve indirici"
authors = ["Junicchi <junicchi@waifu.club>"]
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/kebablord/turkanime-indirici"
keywords = ["turkanime","turk","anime","downloader"]

classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

packages = [
  { include = "turkanime_api" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
selenium = ">=4.2.0"
yt_dlp = "*"
bs4 = ">=0.0.1"
pycryptodome = "*"
appdirs = "*"
questionary = "*"
py7zr = "*"
rich = ">=13.0.0"
easygui = ">=0.98.2"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Publish sırasında yapılması gerekenler:
#   turkanime_api/version.py dosyasındaki build, pip olarak değişmeli.
#   poetry build; poetry install; poetry publish

turkanime = 'turkanime_api.cli.__main__:main'
