[tool.poetry]
name = "turkanime-cli"
version = "9.0.0"
description = "Türkanime video oynatıcı ve indirici"
authors = ["Junicchi <junicchi@waifu.club>"]
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/kebablord/turkanime-indirici"
keywords = ["turkanime","turk","anime","downloader"]

classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

packages = [
  { include = "turkanime_api" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
yt-dlp = { version = "*", extras = ["default", "curl-cffi"] }
curl-cffi = ">=0.13"
pycryptodome = "*"
appdirs = "*"
questionary = "*"
py7zr = "*"
rich = ">=13.0.0"
easygui = ">=0.98.2"
PyQt6 = ">=6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Publish sırasında yapılması gerekenler:
#   turkanime_api/version.py dosyasındaki build, pip olarak değişmeli.
#   poetry build; poetry install; poetry publish

turkanime = 'turkanime_api.cli.__main__:main'
turkanime-gui = 'turkanime_api.gui.main:run'
